--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 
 .weather{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 20px;
     width: 50%;
     border-radius: 15px;
     background-color: rgb(176, 176, 255);
