--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
 }
-
+/* weather__show */
 .weather{
     display: flex;
     justify-content: space-between;
@@ -22,9 +22,13 @@
 }
 .temperature{
     font-size: 20px;
+    font-weight: bold;
 }
-.current-weather{
+.current-weather > div{
     display: flex;
+}
+.current-weather > div *{
+    margin-right:  5px;
 }
 .wheather-icon{
     width: 20px;
