--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@
     padding: 0 20px;
     width: 50%;
     border-radius: 15px;
-    background-color: rgb(176, 176, 255);
+    background: url("./img/clouds-bg.jpg") no-repeat;
+    background-size: 100%;
     box-shadow: 0 5px 10px rgba(0, 0, 0, .5);
 }
 .temperature{
