--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     background: url("./img/clouds-bg.jpg") no-repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 /* weather__show */
 .weather{
