--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ p{
     justify-content: space-around;
     align-items: center;
     padding: 0 20px;
-    width: 50%;
+    width: 60%;
+    height: 40%;
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 0.5);
     
@@ -65,5 +66,33 @@ p{
     .weather{
         width: 90%;
         height: 30%;
+    }
+}
+
+@media (max-width: 440px){
+    .weather{
+        height: 50%;
+    }
+
+    .weather__show *{
+        font-size: 15px;
+    }
+
+    .city-name{
+        font-size: 25px;
+    }
+
+    .weather__get{
+        width: 50%;
+    }
+
+    .weather__get h2{
+        font-size: 20px;
+    }
+}
+
+@media (max-height: 615px){
+    .weather{
+        height: 70%;
     }
 }
